--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="arts">Arts</string>
     <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
     <string name="sports">Sports</string>
-    <string name="btn_save">SAVE</string>
+    <string name="btn_filter">FILTER</string>
 </resources>
