--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NYTimesSearch</string>
+    <string name="app_name">NYTimes Reader</string>
     <string name="action_settings">Settings</string>
     <string name="hint">Search...</string>
     <string name="search">Search</string>
